--- a/src/components/styles/cardResident.css
+++ b/src/components/styles/cardResident.css
@@ -1,24 +1,69 @@
-/*------RESET ------*/
-* {
-    box-sizing: border-box;
+.card {
+    background-color: var(--background-cards);
+    color: white;
+    width: 100%;
+    max-width: 300px;
+    border-radius: 12px;
+    overflow: hidden;
+    height: 508px;
 }
 
-bodi {
-    margin: 0;
+.card__header {
+    position: relative;
 }
-h1, h2, h3, h4, p, ul {
-    margin-top: 0;
-    margin-bottom: 0;
+
+.card__container-status {
+    position: absolute;
+    top: 30px;
+    left: 0;
+    width: 100px;
+    background-color: var(--background-cards);
+    padding: 6px;
+    border-radius: 0 10px 10px 0;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    gap: 8px;
 }
-ul{
-    
+
+.card__circle-status {
+    width: 14px;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    background-color: red;
 }
-img{
-    display: block;
+.Dead {
+ background-color: red;
 }
-button{
-    border: none;
+.unknown {
+    background-color: #aaa;
 }
-input{
-    outline: none;
+.Alive {
+    background-color: green;
+}
+.card__doby {
+    padding: 20px;
+}
+.card__name {
+    font-weight: 500;
+    font-size: 23px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    margin-left: 20px;
+}
+.car__list {
+    display: grid;
+    gap: 10px;
+}
+.card__item {
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+    font-weight: 500;
+    margin-left: 20px;
+}
+.card__span {
+    color: #ccc9;
+    /* transform: translatex(10px); */
+    /* margin-left: 1px; */
 }
